// Copyright 2023 The Bucketeer Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package bucketeer.autoops;
option go_package = "github.com/bucketeer-io/bucketeer/proto/autoops";

message OpsCount {
  string id = 1;
  string auto_ops_rule_id = 2;
  string clause_id = 3;
  int64 updated_at = 4;
  int64 ops_event_count = 5;
  int64 evaluation_count = 6;
  string feature_id = 7;
}